Fix wrapping on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body{
     height: 100vh;
     width: 100vw;
 
-    overflow: hidden;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -21,12 +20,13 @@ form{
 
     display: inline-flex;
     flex-wrap: wrap;
+
     padding: 2% 5%;
 
-    height: 75%;
     width: 70%;
     background-color: transparent;
     box-shadow: 0 0 5px 4px rgba(0,0,0,0.75);
+    color: white;
 }
 
 h1, p{
